[tool.poetry]
name = "jubilant-chainsaw"
version = "0.1.0"
description = "test mente"
authors = ["Andrey T"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
