[tool.poetry]
name = "jubilant-chainsaw"
version = "0.1.0"
description = "test mente"
authors = ["Andrey T"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
fastapi-utils = "^0.8.0"
typing-inspect = "^0.9.0"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
aiohttp = "^3.10.10"
aiomysql = "^0.2.0"
redis = "^5.2.0"
python-json-logger = "^2.0.7"
aio-pika = "^9.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.3"
pre-commit = "^4.0.1"

[tool.ruff.lint]
select = ["E", "F", "W", "C"]
ignore = ["F401"]

[tool.ruff]
line-length = 88
indent-width = 4

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
